SERVER-51523 Don't attempt to retrieve a ReshardingCoordinator instance on a replica set secondary